fix(YALB-1555): increase size of control buttons, set tab height to align buttons

--- a/components/02-molecules/tabs/_yds-tabs.scss
+++ b/components/02-molecules/tabs/_yds-tabs.scss
@@ -15,6 +15,7 @@ $component-tab-themes: map.deep-get(tokens.$tokens, 'component-themes');
   border-bottom: var(--size-thickness-1) solid var(--color-gray-500);
 
   --color-tabs-accent: --color-gray-500;
+  --size-tabs-control: 4rem;
 
   [data-component-alignment='left'] & {
     max-width: var(--size-component-layout-width-content);
@@ -75,7 +76,7 @@ $component-tab-themes: map.deep-get(tokens.$tokens, 'component-themes');
   position: relative;
   display: flex;
   justify-content: center;
-  padding-top: var(--size-spacing-3);
+  height: var(--size-tabs-control);
 
   &::after {
     content: '';
@@ -93,17 +94,18 @@ $component-tab-themes: map.deep-get(tokens.$tokens, 'component-themes');
   @include atoms.button-reset;
 
   position: absolute;
-  top: 0;
+  top: var(--size-thickness-1);
   display: flex;
   align-items: center;
   justify-content: center;
-  height: var(--size-click-target-minimum);
-  width: var(--size-click-target-minimum);
+  width: calc(var(--size-tabs-control) - var(--size-thickness-2));
+  height: calc(var(--size-tabs-control) - var(--size-thickness-2));
   background-color: var(--color-background);
   opacity: 0;
+  border: var(--size-thickness-1) solid var(--color-gray-700);
 
   &--left {
-    left: 0;
+    left: var(--size-thickness-1);
     transform: rotate(90deg);
 
     [data-overflow='left'] &,
@@ -120,7 +122,7 @@ $component-tab-themes: map.deep-get(tokens.$tokens, 'component-themes');
   }
 
   &--right {
-    right: 0;
+    right: var(--size-thickness-1);
     transform: rotate(-90deg);
 
     [data-overflow='right'] &,
@@ -138,8 +140,8 @@ $component-tab-themes: map.deep-get(tokens.$tokens, 'component-themes');
   }
 
   svg {
-    height: 1.5em;
-    width: 1.5em;
+    height: 2.5em;
+    width: 2.5em;
   }
 }
 
@@ -198,7 +200,7 @@ $component-tab-themes: map.deep-get(tokens.$tokens, 'component-themes');
       left: 0;
       right: 0;
       bottom: -2px;
-      border-bottom: 4px solid var(--color-basic-white);
+      border-bottom: var(--size-spacing-3) solid var(--color-basic-white);
       z-index: 1;
     }
   }
